# conspire

./: .gitignore  CMakeLists.txt  README.md  conspire.cap
src/: app.cpp  app.h  main.cpp
src/ecs/: component.h  ecs.h  query.h  world.h
src/ecs/utils/: function_traits.h  remove_smart_ptr.h  type_map.h  utils.h  vec_to_tuple.h
src/rendering/: engine.cpp  engine.h  rendering.h
src/rendering/components/: transform.h
src/rendering/shaders/: colored_triangle.frag  colored_triangle.vert  gradient.comp
src/rendering/systems/: startup_system.h  systems.h
src/rendering/utils/: vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_init.cpp  vk_init.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h  vk_utils.h
